# gem5-dbc

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: README.md
artifacts/packer/: README.md  builds.pkr.hcl  sources.pkr.hcl  vars_build.pkr.hcl  vars_image.pkr.hcl  vars_qemu.pkr.hcl
artifacts/packer/scripts/: artifacts.sh  debian.sh  gem5.sh  ietubench.sh  linux.sh  mini_stream.sh  packages.sh  system.sh
exploration/: exploration.py
exploration/architectures/: graviton3.yaml  graviton38chan.yaml  graviton3BL.yaml  graviton3SmallBL.yaml  graviton3ramulator.yaml  graviton3simple.yaml
exploration/benchmarks/: stream-mpi.py
exploration/modules/: __init__.py
exploration/modules/benchmark/: benchmark.py
exploration/modules/graphics/: __init__.py  colormaps.py  histogram.py  sankey.py
exploration/modules/options/: options.py
exploration/modules/stats/: README.md  __init__.py  parse_roi.py
exploration/modules/template/: template.py
exploration/modules/util/: __init__.py  blis.py  util.py
exploration/templates/: srun_fs.sh  srun_se.sh  work.sh
gem5/: simulate.py
gem5-patches/: bw-lat-ctrl.patch
gem5/modules/caches/: __init__.py  caches.py  prefetcher.py
gem5/modules/classic/: __init__.py
gem5/modules/cpus/: __init__.py  cpus.py
share/gem5-dbc/: schema.json
src/: main.py
src/g5dbc/: __init__.py  main.py  srun.py
tests/: test_cmd_args.py  test_files_find.py  test_resource_db.py  test_schema.py
tools/benchmarks-image/: benchmarks-image.sh  interactive-image.sh
tools/binaries/: README.md
tools/plots/: Base Analysis.ipynb
(+357 files in other folders)
